# nolatabs-chrome-extension

./: .gitignore  README.md  package.json  pnpm-lock.yaml  start.txt  tsconfig.json  webpack.config.js
documentation/: command-pallete-documentation.md  design-decisions.md  directory_structure.md  updating_schemas.md
src/: manifest.json
src/pages/Background/: commands.ts  index.html  index.ts  services.ts  window.ts
src/pages/Content/: index.ts  overlay.html
src/pages/Frontend/: CommandPalette.tsx  Frontend.css  Frontend.tsx  Login.tsx  Main.tsx  Sidebar.tsx  Signup.tsx  index.html  index.tsx
src/pages/Frontend/components/: CommandPalette.tsx  Form.tsx  Sidebar.tsx  ViewSwitcher.tsx
src/pages/Frontend/pages/: Login.tsx  Main.tsx  Signup.tsx  Welcome.tsx
src/pages/Popup/: Popup.css  Popup.jsx
src/pages/logic/: commit.ts  repository.ts  user.ts
src/pages/models/: commit.ts  crypto.ts  messages.ts  repo.ts  repository.ts  tab.ts  user.ts
src/pages/repository/: commit.ts  repository.ts  settings.ts  state.ts  store.ts  user.ts
src/pages/services/: auth.ts  commit.ts  crypto.ts  repository.ts  user.ts
src/tests/: commit.test.ts
src/wasm/mls/: Cargo.toml
src/wasm/mls/src/: lib.rs
src/wasm/mls/tests/: lib_test.rs
