[package]
name = "mls"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.5.0"
openmls = "0.7.1"
openmls_basic_credential = "0.4.1"
openmls_rust_crypto = "0.4.1"
wasm-bindgen = "0.2.104"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0.145"
